--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <title>Sapient Cricket Club</title>
 
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.deep_orange-light_green.min.css" />
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css"> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <base href="/">
@@ -14,7 +15,7 @@
 
 <body>
     <app-root>Loading...</app-root>
-    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <!-- <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> -->
 </body>
 
 </html>
