--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 <body>
     <app-root>Loading...</app-root>
     <!-- <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script> -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </body>
 
 </html>
